# pyskeleton

./: .devcontainer.json  .dockerignore  .gitignore  .mypy.ini  Dockerfile  Dockerfile.CUDA  LICENSE  MANIFEST.in  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: Dockerfile.dev  pyskeleton.pth
project-template/: .devcontainer.json.j2  .gitignore  .mypy.ini.j2  Dockerfile.j2  Makefile  pyproject.toml  pyproject.toml.j2
project-template/.devcontainer/: .env  Dockerfile.dev.j2  project.pth.j2
test_env/: pyvenv.cfg
