[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/template-core",
    "packages/template-interfaces",
    "packages/template-app",
]
[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
    "ruff>=0.11.6",
    "flake8>=7.2.0",

]
[tool.uv]
managed = true
